package com.project.app.model;

public class ClientsDataAccessor {
    //Class where we access Client Logs, Pass and Statistics
    //TODO : everything

}
