package com.project.app.model;

public class ClientsJSONHandler {
    //Class that will acces Clients JSON file
    //TODO : everything
}
