@startuml

title __MODEL's Class Diagram__\n

  package com.project.app {
    package com.project.app.model {
      class Client {
          - login : String
          - password : String
          + Client()
          + getLogin()
          + getPassword()
      }
    }
  }
  

  package com.project.app {
    package com.project.app.model {
      class ClientsDataAccessor {
      }
    }
  }

  package com.project.app {
      package com.project.app.model {
        class ClientParser {
            - parse()
            {static} + main()
        }
      }
   }
  

  package com.project.app {
    package com.project.app.model {
      class ClientsJSONHandler {
      }
    }
  }
  

  package com.project.app {
    package com.project.app.model {
      class DictionaryAccessor {
          - handler : DictionaryJSONHandler
          + DictionaryAccessor()
          + addArrayListOfWordsToJSON()
          + getRandomWord()
      }
    }
  }
  

  package com.project.app {
    package com.project.app.model {
      class DictionaryJSONHandler {
          - parser : JSONParser
          + DictionaryJSONHandler()
          # addWordToJSON()
          + getRandomWordFromJSON()
      }
    }
  }
  

  package com.project.app {
    package com.project.app.model {
      class Parser {
          - parse()
          {static} + main()
      }
    }
  }

  package com.project.app {
    package com.project.app.model {
      class Word {
          - eng : String
          - pl : String
          - label : String
          + Word()
          + getEng()
          + getPl()
          + getLabel()
      }
    }
  }

  package com.project.app {
      package com.project.app.controller {
        class WebController {
            + showLearningPage()
        }
      }
  }

  package com.project.app {
      package com.project.app.model {
        DictionaryAccessor o-- DictionaryJSONHandler
        DictionaryJSONHandler  o-- Parser
        Parser "1" - "*" Word
        WebController o-- DictionaryAccessor
        ClientsDataAccessor o-- ClientsJSONHandler
        ClientsJSONHandler  o-- ClientParser
        ClientParser "1" - "*" Client
        WebController o-- ClientsDataAccessor
      }
  }


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
